Add support for 5 additional rivers with 6 new monitoring stations
Extends the River Guru application to monitor 5 rivers across Ireland with
7 total stations, allowing users to switch between rivers via an interactive
navigation interface.

New Rivers & Stations:
- River Blackwater: Fermoy Town (18106), Mallow Railway Bridge (18055)
- River Suir: New Bridge Golden (16008)
- River Bandon: Curranure (20002)
- River Owenboy: Owenboy (19001)

Backend Changes:
- Update template.yaml with 6 new water level stations
- All stations use waterlevel.ie API with CSV parsing
- Lambda function now processes 7 stations total (1 flow + 6 water level)
- Backend deployed via Lambda environment variable update

Frontend Changes:
- Create RiverSelector.vue component with visual river navigation
- Update App.vue to support multi-river switching with dynamic content
- Add river configurations with descriptions and station mappings
- Implement responsive grid layout for multiple stations per river
- Support both flow (Inniscarra) and water level stations

Features:
- Visual river selector with icons and station counts
- Dynamic station display based on selected river
- Automatic scroll-to-top on river change
- River-specific descriptions and information cards
- Maintains all existing functionality for River Lee stations

Testing:
- Lambda successfully processes all 7 stations with 100% success rate
- All stations collecting data: Inniscarra (145.0 m³/s), Waterworks (1.587m),
  Fermoy (1.604m), Mallow (1.538m), Suir (0.898m), Owenboy (2.076m),
  Bandon (1.043m)

Full deployment completed with frontend live on S3.

--- a/template.yaml
+++ b/template.yaml
@@ -171,6 +171,46 @@ Resources:
                 "url": "https://waterlevel.ie/data/day/19102_{sensor}.csv",
                 "source_type": "api",
                 "enabled": true
+              },
+              {
+                "station_id": "blackwater_fermoy",
+                "name": "Fermoy Town",
+                "river": "River Blackwater",
+                "url": "https://waterlevel.ie/data/day/18106_{sensor}.csv",
+                "source_type": "api",
+                "enabled": true
+              },
+              {
+                "station_id": "blackwater_mallow",
+                "name": "Mallow Railway Bridge",
+                "river": "River Blackwater",
+                "url": "https://waterlevel.ie/data/day/18055_{sensor}.csv",
+                "source_type": "api",
+                "enabled": true
+              },
+              {
+                "station_id": "suir_golden",
+                "name": "New Bridge (Golden)",
+                "river": "River Suir",
+                "url": "https://waterlevel.ie/data/day/16008_{sensor}.csv",
+                "source_type": "api",
+                "enabled": true
+              },
+              {
+                "station_id": "owenboy",
+                "name": "Owenboy",
+                "river": "River Owenboy",
+                "url": "https://waterlevel.ie/data/day/19001_{sensor}.csv",
+                "source_type": "api",
+                "enabled": true
+              },
+              {
+                "station_id": "bandon_curranure",
+                "name": "Curranure",
+                "river": "River Bandon",
+                "url": "https://waterlevel.ie/data/day/20002_{sensor}.csv",
+                "source_type": "api",
+                "enabled": true
               }
             ]
       Events:
