Add Dash0 observability via ADOT Lambda layer
Integrate OpenTelemetry instrumentation on both Lambda functions
(data collector and data API) using the AWS Distro for OpenTelemetry
(ADOT) layer with a custom collector config that exports traces,
metrics, and logs to Dash0 via OTLP/HTTP.

- Add OTel Collector config as Lambda layer (otlphttp exporter to Dash0)
- Add ADOT Python auto-instrumentation layer to both functions
- Add trace/span ID injection in structured logger for log-trace correlation
- Pass Dash0 auth token securely via env var at deploy time
- Document Dash0 config in .env.example

--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,15 @@ S3_STORAGE_CLASS=STANDARD
 # AWS_SESSION_TOKEN=your_session_token
 
 # ============================================================================
+# Dash0 Observability
+# ============================================================================
+# Auth token for Dash0 OTLP ingress (used during sam deploy via Makefile)
+# DASH0_AUTH_TOKEN=your_dash0_token_here
+
+# OTLP/HTTP endpoint (find yours at Dash0 > Settings > Endpoints)
+# DASH0_OTLP_ENDPOINT=https://ingress.europe-west4.gcp.dash0.com
+
+# ============================================================================
 # Local Development Options
 # ============================================================================
 # Use LocalStack for local AWS development (true/false)
