--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,8 @@ pydantic>=2.0.0,<3.0.0
 # PDF parsing for ESB Hydro flow data
 pdfplumber>=0.10.0,<1.0.0
 
+# Note: opentelemetry-api is provided by the ADOT Lambda layer at runtime.
+# Do NOT add it here - bundling a separate version causes import conflicts.
+
 # Type hints for older Python versions (if needed)
 typing-extensions>=4.5.0; python_version < '3.11'
